# PostPay

./: Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
data/: sample_emails.json
src/: main.py
src/db/: migrate.py
src/parsers/: zelle_parser.py
src/postpay/: __init__.py  cli.py  config.py  logging.conf  main.py
src/postpay/db/: __init__.py  connection.py
src/postpay/parsers/: __init__.py  apple_parser.py  cashapp_parser.py  other_parsers.py  venmo_parser.py  zelle_parser.py
src/postpay/services/: __init__.py  message_formatter.py  slack_client.py
src/postpay/services/email/: gmail_client.py
src/postpay/services/notifications/: __init__.py  formatter.py  slack.py
src/postpay/services/payments/: __init__.py  importer.py
src/postpay/services/scheduling/: __init__.py  scheduler.py  sleep_window.py
src/postpay/utils/: __init__.py  logging_utils.py  sleep_window.py
src/services/: payment_importer.py  scheduler.py
tests/: test_gmail_client.py  test_importer.py  test_parsers.py  test_slack_client.py
versions/PostPay_v1/: PostPay1.1.1.py  PostPay1.2.py  postpay1.3.2.py  postpay1.3.py
versions/PostPay_v2/: postpay2.1.1.py  postpay2.1.py
versions/PostPay_v3/: PostPay3.2.1.py  PostPay3.2.py  postpay3.1.py
