[project]
name = "postpay"
version = "4.1.0"
description = "Automated payment-notification ingestion and Slack alerting system."
readme = "README.md"
authors = [
    { name = "Jason Burleigh", email = "jburleigh1992@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [
    "requests>=2.28",
    "pandas>=1.5",
    "google-auth>=2.23",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.100",
]

license = { text = "MIT" }

# Standardized PyPI classifiers
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Office/Business :: Financial :: Accounting",
]

# Installable script
[project.scripts]
postpay = "postpay.main:main"

# Optional groups
[project.optional-dependencies]
dev = [
    "pytest>=7",
    "black>=23",
    "flake8>=6",
]

# URLs that show on PyPI or GitHub metadata
[project.urls]
homepage = "https://github.com/jburleigh92/PostPay"
repository = "https://github.com/jburleigh92/PostPay"
issues = "https://github.com/jburleigh92/PostPay/issues"

# Build system
[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

# Tell setuptools how to find the package
[tool.setuptools.packages.find]
where = ["src"]
include = ["postpay*"]
