[project]
name = "postpay"
version = "4.1.0"
description = "Automated payment ingestion, parsing, and Slack alerting system."
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Jason Burleigh", email = "jburleigh1992@gmail.com" }
]

license = { text = "MIT" }

dependencies = [
    "requests>=2.28",
    "pandas>=1.5",
    "google-auth>=2.23",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.100",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business :: Financial :: Accounting",
]

# CLI entry point: 'postpay' -> postpay.main:main
[project.scripts]
postpay = "postpay.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "black>=23",
    "flake8>=6",
]

[project.urls]
homepage = "https://github.com/jburleigh92/PostPay"
repository = "https://github.com/jburleigh92/PostPay"
issues = "https://github.com/jburleigh92/PostPay/issues"

# --------------------------
# BUILD SYSTEM (HATCHLING)
# --------------------------
[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

# Package discovery: look inside /src
[tool.hatch.build.targets.wheel]
packages = ["src/postpay"]
